--- a/add-route.html
+++ b/add-route.html
@@ -133,7 +133,7 @@
 
     // Load Google Maps JS + initialize autocomplete
     const script = document.createElement("script");
-    script.src = `https://maps.googleapis.com/maps/api/js?key=${AIzaSyABBbwu3ehg4IXQYqOtz-txvNG4KYkj3ss}&libraries=places&callback=initAutocomplete`;
+    script.src = `https://maps.googleapis.com/maps/api/js?key=${GOOGLE_MAPS_API_KEY}&libraries=places&callback=initAutocomplete`;
     script.async = true;
     document.head.appendChild(script);
   </script>
