--- a/add-route.html
+++ b/add-route.html
@@ -90,7 +90,7 @@
   <div class="container">
     <h2>Add Delivery Route</h2>
 
-    <label for="origin" style="margin-top:12px">Origin (fixed)</label>
+    <label for="origin" style="margin-top:12px">Origin</label>
     <input type="text" id="origin" placeholder="Enter origin" data-place-id="">
 
     <div class="hr"></div>
